--- a/src/components/TitleBlock/title-block.scss
+++ b/src/components/TitleBlock/title-block.scss
@@ -40,15 +40,15 @@
   font-size: calc(36px + 56 * ((100vw - 320px) / 1264));
 
   @include breakpoint('sm') {
-    padding-bottom: 1rem;
+    //padding-bottom: 1rem;
   }
 
   @include breakpoint('md') {
-    padding-bottom: 2rem;
+    //padding-bottom: 2rem;
   }
 
   @include breakpoint('lg') {
-    padding-bottom: 4rem;
+    padding-bottom: 2rem;
   }
 
   span {
